--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,28 +12,36 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "datatables.net": "^2.1.8",
     "datatables.net-dt": "^2.1.8",
     "datatables.net-react": "^1.0.0",
     "exceljs": "^4.4.0",
     "jquery": "^3.7.1",
+    "js-xlsx": "^0.8.22",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-paginate": "^8.2.0",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "react-scroll": "^1.9.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "vite": "^5.4.10"
   }
 }
